@@ -1,6 +1,8 @@
 Version 1.7.3+svn:
  * Language and i18n:
    * Updated translations:
+ * Miscellaneous and bugfixes:
+   * Removed obsolete code for implicit linked widgets for the listbox
 
 Version 1.7.3:
  * AI:
